force-app/main/default/objects/WMSBillLoan__c/WMSBillLoan__c.object-meta.xml
<CustomObject>
    <label>WMS Bill+Loan</label>
    <nameField>
        <displayFormat>WBL-{000000}</displayFormat>
        <label>WMS BILL+LOAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WMS Bill+Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>