force-app/main/default/objects/WMSBillLoan__c/fields/ReceivablePayableRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>ReceivablePayableRollupStatus__c</fullName>
    <label>RECEIVABLE &amp; PAYABLE ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>