force-app/main/default/objects/WMSBillLoan__c/fields/WMSBillID__c.field-meta.xml
<CustomField>
    <fullName>WMSBillID__c</fullName>
    <label>WMS BILL ID</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>WMS BILL+LOAN</relationshipLabel>
    <relationshipName>WMSBillLoan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>